Disable CI unit tests for now

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Unit Tests
+name: CI
 
 on: [push, pull_request]
 
@@ -15,22 +15,23 @@ jobs:
       - name: Install dependencies
         run: sudo apt-get install sloccount
       - name: Verify less than 1000 lines
-        run: if [ $(sloccount fastwsgi.py fastwsgi/ | sed -n 's/.*Total Physical Source Lines of Code (SLOC)[ ]*= \([^ ]*\).*/\1/p' | tr -d ',') -gt 1000 ]; then exit 1; fi
-    
-  unittests:
-    name: Unit Tests
-    runs-on: ubuntu-latest
+        run: sloccount fastwsgi.py fastwsgi/; if [ $(sloccount fastwsgi.py fastwsgi/ | sed -n 's/.*Total Physical Source Lines of Code (SLOC)[ ]*= \([^ ]*\).*/\1/p' | tr -d ',') -gt 1000 ]; then exit 1; fi
 
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
-      - name: Update packages
-        run: sudo apt-get update
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.8
-      - name: Install dependencies
-        run: pip install -e '.[testing]'
-      - name: Run unit tests
-        run: python -m pytest -s -v
+  # FIX ME: Need to package libuv in repo
+  # unittests:
+  #   name: Unit Tests
+  #   runs-on: ubuntu-latest
+
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v2
+  #     - name: Update packages
+  #       run: sudo apt-get update
+  #     - name: Set up Python 3.8
+  #       uses: actions/setup-python@v2
+  #       with:
+  #         python-version: 3.8
+  #     - name: Install dependencies
+  #       run: pip install -e '.[testing]'
+  #     - name: Run unit tests
+  #       run: python -m pytest -s -v
