--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: true
-          token: ${{ secrets.CI_TOKEN }}
+          token: ${{ github.token }}
       - name: Update packages
         run: sudo apt-get update -yq
       - name: Set up Python 3.8
