--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "llhttp"]
 	path = llhttp
 	url = https://github.com/nodejs/llhttp
+[submodule "libuv"]
+	path = libuv
+	url = https://github.com/libuv/libuv
