New Pypi release

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,11 @@
 include llhttp/include/*.h
 include llhttp/src/*.c
 include llhttp/src/*.h
+include libuv/include/*/*.h
+include libuv/src/*/*.c
+include libuv/src/*/*.h
 include fastwsgi/*.c
 include fastwsgi/*.h
 include LICENSE
 include README.md
+include setup_libuv.py
