--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,12 +1,14 @@
 include llhttp/include/*.h
 include llhttp/src/*.c
 include llhttp/src/*.h
+include llhttp/LICENSE-MIT
 include libuv/include/*.h
 include libuv/include/*/*.h
 include libuv/src/*.c
 include libuv/src/*.h
 include libuv/src/*/*.c
 include libuv/src/*/*.h
+include libuv/LICENSE
 include fastwsgi/*.c
 include fastwsgi/*.h
 include LICENSE
